@@ -145,27 +145,13 @@
                                                     <include>${project.groupId}:sms-consumer:jar:${project.version}
                                                     </include>
                                                 </includes>
-                                                <outputFileNameMapping>app.jar</outputFileNameMapping>
+                                                <outputFileNameMapping>sms-consumer.jar</outputFileNameMapping>
                                             </dependencySet>
                                         </dependencySets>
                                     </inline>
                                 </assembly>
                                 <entryPoint>
-                                    <shell>java -server -ea -XX:+AggressiveOpts -Xms512M -Xmx2G \
-                                        -Djava.security.egd=file:/dev/urandom \
-                                        -Dvcap.services.eureka-service.credentials.uri=http://${docker.host.address}:${registry.server.port} \
-                                        -Deureka.instance.hostname=${docker.host.address} \
-                                        -Deureka.instance.nonSecurePort=${sms-consumer.server.port} \
-                                        -Dspring.rabbitmq.host=${docker.host.address} \
-                                        -Dspring.datasource.driver-class-name=com.mysql.jdbc.Driver \
-                                        -Dspring.datasource.url=jdbc:mysql://${docker.host.address}:3306/messaging \
-                                        -Dspring.datasource.username=${mysql.user.name} \
-                                        -Dspring.datasource.password=${mysql.user.password} \
-                                        -Dopenexchange.sms.consumer.job.parallelism=1 \
-                                        -Dopenexchange.sms.consumer.job.repeatIntervalTimeUnit=SECONDS \
-                                        -jar \
-                                        /maven/app.jar
-                                    </shell>
+                                    <shell>java $JAVA_OPTS -Djava.security.egd=file:/dev/urandom -jar /maven/sms-consumer.jar</shell>
                                 </entryPoint>
                             </build>
                         </image>
@@ -173,8 +159,8 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>start</id>
-                        <phase>pre-integration-test</phase>
+                        <id>docker</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>build</goal>
                         </goals>
